All the points in the revision of 8th APRIL are fixed and covered

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -135,7 +135,7 @@ body.no-scroll {
   background-repeat: no-repeat;
 }
 
-.vision-card-points-gradient {
+.card-points-gradient {
   background: linear-gradient(153deg, rgba(14, 55, 88, 0.5) 0%, rgba(28, 117, 188, 0) 23%, rgba(28, 117, 188, 0) 77%, rgba(28, 117, 188, 0.2) 100%);
 }
 
